# Sunny_circle

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
backend/: settings.py  urls.py
docker/api/: Dockerfile
nginx/: default.conf
src/approval_cookies/: apps.py  models.py  urls.py  views.py
src/approval_cookies/migrations/: 0001_initial.py
src/assistance/: admin.py  apps.py  models.py  serializers.py  views.py
src/assistance/migrations/: 0001_initial.py
src/base/: services.py
src/center/: admin.py  apps.py  models.py  pagination.py  serializers.py  views.py
src/center/migrations/: 0001_initial.py
src/contacts/: admin.py  apps.py  models.py  serializers.py  views.py
src/contacts/migrations/: 0001_initial.py
src/main_page/: admin.py  apps.py  models.py  serializers.py  views.py
src/main_page/migrations/: 0001_initial.py
src/partners/: apps.py
